--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -19,7 +19,7 @@ on:
   status: {}
 jobs:
   automerge:
-    if: github.actor == 'dependabot'
+    if: github.actor == 'dependabot' || github.actor == 'andrewjkerr'
     runs-on: ubuntu-latest
     steps:
       - id: automerge
