--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -29,3 +29,4 @@ jobs:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
           MERGE_LABELS: 'dependencies'
           MERGE_METHOD: 'squash'
+          MERGE_DELETE_BRANCH: true
