--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -27,7 +27,7 @@ jobs:
         uses: lewagon/wait-on-check-action@v1.2.0
         with:
           ref: master
-          check-name: Sorbet
+          check-name: sorbet
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 20
       - id: automerge
