oops, this param doesnt work how I expected

--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -35,6 +35,6 @@ jobs:
         uses: 'pascalgn/automerge-action@v0.15.5'
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-          MERGE_LABELS: 'automerge,dependencies'
+          MERGE_LABELS: 'dependencies'
           MERGE_METHOD: 'squash'
           MERGE_DELETE_BRANCH: true
